2006-08-31  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-group.c: (clutter_group_paint),
	(clutter_group_request_coords), (clutter_group_allocate_coords),
	(clutter_group_add):
	Fix some group sizing/positioning issues.

2006-08-30  Jorn Baayen  <jorn@openedhand.com>

	* clutter.pc.in:

	Remove gstreamer deps.

2006-08-30  Jorn Baayen  <jorn@openedhand.com>

	* README:
	* clutter/Makefile.am:
	* clutter/clutter-audio.c:
	* clutter/clutter-audio.h:
	* clutter/clutter-main.c: (clutter_init):
	* clutter/clutter-media.c:
	* clutter/clutter-media.h:
	* clutter/clutter-video-texture.c:
	* clutter/clutter-video-texture.h:
	* clutter/clutter.h:
	* configure.ac:
	* examples/Makefile.am:
	* examples/README:
	* examples/video-cube.c:
	* examples/video-player.c:
	* gst/Makefile.am:
	* gst/clutterimagesink.:
	* gst/clutterimagesink.c:
	* gst/clutterimagesink.h:
	* gtk/Makefile.am:

	Remove gstreamer bits. There live in clutter-gst now.

2006-08-30  Jorn Baayen  <jorn@openedhand.com>

	* clutter/Makefile.am:
	* clutter/clutter-audio.c:
	* clutter/clutter-audio.h:
	* clutter/clutter.h:

	Added ClutterAudio audio playback object.

2006-08-29  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-fixed.h:
	Add basic fixed point utility defines and type.

	* clutter/Makefile.am:
	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* clutter/clutter-group.c:
	* clutter/clutter-stage.c:
	* examples/super-oh.c: (main):
	Add scale API and functionality.
	Rework group sizing. Now group size requests have no effect
	but can be scaled.

2006-08-29  Jorn Baayen  <jorn@openedhand.com>

	* clutter/clutter-behaviour.c: (_clutter_behaviour_finalize),
	(_clutter_behaviour_set_property),
	(_clutter_behaviour_get_property), (clutter_behaviour_class_init),
	(clutter_behaviour_init), (clutter_behaviour_apply),
	(clutter_behaviour_remove), (clutter_behaviour_remove_all),
	(clutter_behaviour_actors_foreach):
	* clutter/clutter-behaviour.h: